adds cors to fix error in swagger
